# cuimg

./: AUTHORS  CMakeLists.txt  LICENCE  README.rst
benchmarks/improved_builtins/: CMakeLists.txt
cmake/: FindCUDA.cmake
cuimg/: TODO  architectures.h  background_video_capture.cpp  background_video_capture.h  border.h  box2d.h  box2d.hpp  builtin_math.h  color_conversions.hh  copy.h  dige.h  dige.hpp  draw.h  dsl.h  error.h  gl.h  grid.h  image2d.h  image2d_target.h  image_traits.h  improved_builtin.h  improved_builtin.hpp  improved_builtin.old.h  iterate.h  kernel_type.h  literals.h  load_image.cpp  load_image.h  memset.h  meta.h  mt_apply.h  neighb2d_data.cu  neighb2d_data.h  neighb_iterator2d.h  obox2d.h  obox2d.hpp  obox3d.h  (+13 more)
samples/tracking/: CMakeLists.txt  main.cc
trunk/: CMakeLists.txt  README.rst  make_meta_gaussian.cpp
trunk/benchmarks/convolutions/: CMakeLists.txt  main.cu
trunk/benchmarks/convolutions_dyn/: CMakeLists.txt  main.cu
trunk/benchmarks/gaussian/: CMakeLists.txt  main.cu
trunk/benchmarks/improved_builtins/: CMakeLists.txt  main.cu
trunk/cuimg/: TODO  background_video_capture.cpp  background_video_capture.h  builtin_math.h  concepts.h  convolve.h  convolve.hpp  copy.h  dige.h  dige.hpp  draw.h  error.h  free.h  gaussian_kernel.h  gaussian_static.h  gl.h  hd.h  host_image2d.h  host_image2d.hpp  host_image3d.h  host_image3d.hpp  image2d.h  image2d.hpp  image2d_math.h  image2d_target.h  image3d.h  image3d.hpp  image_traits.h  improved_builtin.h  improved_builtin.hpp  improved_builtin.old.h  kernel_image2d.h  kernel_image2d.hpp  kernel_image3d.h  kernel_image3d.hpp  literals.h  load_image.cpp  load_image.h  local_jet_overlap.h  local_jet_static.h  (+33 more)
trunk/cuimg/arith/: aggregate.h  binary_op.h  expr.h  return_type.h  threshold.h  to_rgba.h  traits.h
trunk/cuimg/cpu/: convolve.h  copy.h  fill.h  gaussian_noise.h  host_image2d.h  host_image2d.hpp  host_image2d_ops.h  host_image3d.h  host_image3d.hpp  lj.h  lj_notes.cpp  map.h  nl_means.h
trunk/cuimg/dsl/: abs.h  adapt_struct.h  aggregate.h  assign.h  binary_add.h  binary_div.h  binary_mul.h  binary_op.h  binary_sub.h  color_conversion.h  convolve.h  eval.h  expr.h  get_comp.h  has.h  norml2.h  return_type.h  sqrt.h  subsample.h  threshold.h  to_rgba.h  traits.h  tuple.h  tuple_eval.h  tuple_gist.h  typelist.h
trunk/cuimg/gpu/: array_image3d.h  array_image3d.hpp  color_conversion.h  convolve.h  convolve.hpp  cuda.h  device_image2d.h  device_image2d.hpp  device_image3d.h  device_image3d.hpp  fill.h  gaussian_kernel.h  gaussian_static.h  image2d.h  image2d.hpp  image2d_math.h  image3d.h  image3d.hpp  kernel_image2d.h  kernel_image2d.hpp  kernel_image3d.h  kernel_image3d.hpp  kernel_util.h  local_jet_overlap.h  local_jet_static.h  mega_convolve.h  meta_convolve.h  meta_convolve2.h  mipmap.h  nocuda_defines.h  paste.h  sort.h  texture.h  util.h
trunk/cuimg/gpu/arith/: aggregate.h  binary_add.h  binary_add.old.h  binary_div.h  binary_mul.h  binary_op.h  binary_sub.h  color_conversion.h  eval.h  get_comp.h  return_type.h  sqrt.h  subsample.h  threshold.h  to_rgba.h  traits.h  wrapper.h
trunk/cuimg/gpu/tracking/: bfast_feature.h  bfast_feature.hpp  fast16_2s_feature.h  fast16_2s_feature.hpp  fast382s_feature.h  fast382s_feature.hpp  fast382sl_feature.h  fast382sl_feature.hpp  fast38_feature.h  fast38_feature.hpp  fast3_feature.h  fast3_feature.hpp  fast_feature.h  fast_feature.hpp  fast_tools.h  global_mvt_thread.h  global_mvt_thread.hpp  large_mvt_detector.h  large_mvt_detector.hpp  large_mvt_detector.hpp~  lazy_thrust_allocator.h  lgp4.h  lgp4.hpp  lgp8.h  lgp8.hpp  lgp82s.h  lgp82s.hpp  matcher_tools.h  multi_scale_matcher.h  multi_scale_matcher.hpp  multi_scale_tracker.h  multi_scale_tracker.hpp  naive_local_matcher.h  naive_local_matcher.hpp  naive_local_matcher2.h  naive_local_matcher2.hpp  naive_local_matcher_thrust.h  naive_local_matcher_thrust.hpp  ofast382sl_feature.h  ofast382sl_feature.hpp  (+6 more)
trunk/cuimg/meta_gaussian/: meta_gaussian.h  meta_gaussian_coef.h  meta_gaussian_coef_0.h  meta_gaussian_coef_1.h  meta_gaussian_coef_10.h  meta_gaussian_coef_100.h  meta_gaussian_coef_101.h  meta_gaussian_coef_102.h  meta_gaussian_coef_103.h  meta_gaussian_coef_104.h  meta_gaussian_coef_105.h  meta_gaussian_coef_106.h  meta_gaussian_coef_107.h  meta_gaussian_coef_108.h  meta_gaussian_coef_109.h  meta_gaussian_coef_11.h  meta_gaussian_coef_110.h  meta_gaussian_coef_111.h  meta_gaussian_coef_112.h  meta_gaussian_coef_113.h  meta_gaussian_coef_114.h  meta_gaussian_coef_115.h  meta_gaussian_coef_116.h  meta_gaussian_coef_117.h  meta_gaussian_coef_118.h  meta_gaussian_coef_119.h  meta_gaussian_coef_12.h  meta_gaussian_coef_120.h  meta_gaussian_coef_121.h  meta_gaussian_coef_122.h  meta_gaussian_coef_123.h  meta_gaussian_coef_124.h  meta_gaussian_coef_125.h  meta_gaussian_coef_126.h  meta_gaussian_coef_127.h  meta_gaussian_coef_128.h  meta_gaussian_coef_129.h  meta_gaussian_coef_13.h  meta_gaussian_coef_130.h  meta_gaussian_coef_131.h  (+313 more)
trunk/cuimg/tracking/: better_fast_feature.hpp  bfast_feature.h  bfast_feature.hpp  fast16_2s_feature.h  fast382s_feature.h  fast382sl_feature.h  fast382sl_feature.hpp  fast38_feature.h  fast3_feature.h  fast3_feature.hpp  fast_feature.h  fast_tools.h  ffast382sl_feature.h  ffast382sl_feature.hpp  ffast4_feature.h  ffast4_feature.hpp  global_mvt_thread.h  global_mvt_thread.hpp  large_mvt_detector.h  large_mvt_detector.hpp  lgp4.h  lgp8.h  lgp82s.h  matcher_tools.h  multi_scale_matcher.h  multi_scale_matcher.hpp  multi_scale_tracker.h  multi_scale_tracker.hpp  multi_scale_tracking.h  naive_local_matcher.h  naive_local_matcher.hpp  naive_local_matcher2.h  naive_local_matcher2.hpp  naive_local_matcher_thrust.h  naive_local_matcher_thrust.hpp  ofast382sl_feature.h  ofast382sl_feature.hpp  ofast_local_matcher.h  ofast_local_matcher.hpp  rdepth_estimator.hpp  (+5 more)
trunk/doc/: presentation.tex  talk.txt
trunk/tests/: host_image3d.cpp  image2d.cu  obox2d.cu  shared_ptr.cu
trunk/tools/: make_meta_gaussian.cpp
trunk/tools/make_meta_gaussian/: CMakeLists.txt  make_meta_gaussian.cpp
(+315 files in other folders)
